--- a/css/style.css
+++ b/css/style.css
@@ -63,3 +63,25 @@ label {
 select.selectize{
     display: none;
 }
+
+.container{
+    padding: 0px 5px;
+}
+
+.table-buttons{
+    padding: 0px!important;
+    width: 70px;
+}
+.table-buttons a{
+    margin: 2px 0px;
+    padding: 3px 7px;
+}
+
+.date-td{
+    min-width: 85px;
+}
+
+.text-center th,
+.text-center td{
+    text-align: center;
+}
