--- a/css/style.css
+++ b/css/style.css
@@ -301,7 +301,7 @@ form.view-form  label.checkbox{
 .col-container td{
     width: 50%;
     padding: 10px;
-    border-right: 1px solid #fff;
+    border-left: 1px solid #fff;
     border-top: 1px solid #fff;
 }
 
@@ -347,7 +347,9 @@ form.view-form  label.checkbox{
     display: initial;
 }
 
-.panel-body.active .col-container{
+.panel-body.active .col-container,
+.job-submit,
+.file-upload{
     width: 100%;
 }
 
@@ -357,7 +359,8 @@ form.view-form  label.checkbox{
     display: inline-block;
 }
 
-.upload-buttons{
+.upload-buttons,
+.status-cell{
     padding: 10px;
 }
 
@@ -366,9 +369,36 @@ form.view-form  label.checkbox{
     margin: 10px 0px;
 }
 
+.col-container .multiselect-container label {
+    width: 100%;
+}
 
+.column-value .multiselect-container a{
+    height: 25px;
+}
+.column-value .multiselect-container a input[type="checkbox"] {
+    margin-top: 3px;
+}
 
+.col-container label.old_value{
+    width: 100%;
+}
 
+.flatten-sub-table tr{
+    background: none!important;
+}
+.flatten-sub-table td{
+    background: none!important;
+    border:none!important;
+}
+
+.width100{
+    width: 100%!important;
+}
+
+.extra{
+    border-left: none!important;
+}
 
 
 
@@ -494,5 +524,9 @@ table.table>tbody>tr>td{
 
 .modal-body{
     overflow: scroll;
+}
+
+.text-danger {
+    color: red;
 }
 
