--- a/css/style.css
+++ b/css/style.css
@@ -98,6 +98,9 @@ tr.text-center td{
 table td input[type=checkbox]{
     margin-top: -3px;
 }
+table td .multiselect-container input[type=checkbox]{
+    margin-top: 3px;
+}
 
 .no-filters{
     top: -39px;
