--- a/css/style.css
+++ b/css/style.css
@@ -102,6 +102,10 @@ table td .multiselect-container input[type=checkbox]{
     margin-top: 3px;
 }
 
+.multiselect-container input[type=checkbox]{
+    width:15px;
+}
+
 .no-filters{
     top: -39px;
     position: relative;
@@ -412,6 +416,35 @@ form.view-form  label.checkbox{
 .margin-10{
     margin-top: -10px;
 }
+
+.date-range-container input[type="text"]{
+    width: 200px;
+    text-align: center;
+    font-weight: bold;
+}
+.date-range-container{
+    display: inline-block;
+}
+.filter-select-container{
+    display: inline-block;
+    min-width: 215px;
+}
+.filter-select-label{
+    position: relative;
+    top: -10px;
+}
+
+.date-range-label{
+    width:160px;
+    text-overflow: ellipsis;
+    overflow: hidden;
+    margin-bottom: -5px;
+}
+
+.filter-info-container .selectize-input{
+    padding-right: 30px;
+}
+
 
 
 
