--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,6 @@
 @charset "UTF-8";
 @import "media.css";
+@import "reports.css";
 /*
  * jQuery File Upload Plugin CSS Example 8.8.2
  * https://github.com/blueimp/jQuery-File-Upload
