--- a/css/style.css
+++ b/css/style.css
@@ -29,6 +29,9 @@ label {
     width: 70px;
     top:50%;
     margin-top: -70px;
+    color: #fff;
+    text-align: center;
+    font-size: 17px;
 }
 
 #loading img{
@@ -54,7 +57,7 @@ label {
 
 .filter-info-container{
     border: 1px solid #ccc;
-    padding: 0px 10px 10px 10px;
+    padding: 10px 10px 10px 10px;
 }
 
 .filter-item{
@@ -418,7 +421,8 @@ form.view-form  label.checkbox{
     margin-top: -10px;
 }
 
-.date-range-container input[type="text"]{
+.date-range-container input[type="text"],
+.date-range-container select{
     width: 200px;
     text-align: center;
     font-weight: bold;
@@ -563,6 +567,10 @@ table.table>tbody>tr>td{
 
 .badge{
     background-color: #FF8484;
+}
+
+.btn-simple{
+    border: 1px solid #ccc;
 }
 
 .btn .caret {
