--- a/css/reports.css
+++ b/css/reports.css
@@ -46,13 +46,34 @@
 .chart-container{
     width: 69%;
     height: 600px;
-    background-color: #ccc;
     float: left;
 }
+.height-400{
+    height: 400px;
+}
+.height-300{
+    height: 300px;
+}
+.width-400{
+    width: 400px;
+}
+.width-1-3{
+    width: 33%;
+}
+.chart-list-container>div{
+    float: left;
+}
+
 .chart-container.full-width{
     width: 100%;
     float:none;
 }
 .list-label{
     font-size: 18px;
+}
+
+.charts-expand{
+    width: 100%;
+    text-align: center;
+    margin-bottom:10px;
 }
