--- a/css/media.css
+++ b/css/media.css
@@ -1,3 +1,14 @@
+
+@media (min-width: 992px){
+    #batchEditModal .modal-dialog.modal-lg{
+        width: 90%;
+    }
+}
+@media (min-width: 768px){
+    .modal-dialog {
+        width: 90%;
+    }
+}
 @media (max-width:1070px){
     .col-container tr:nth-child(odd){
         background: none!important;
