LIFD page improvements

--- a/css/style.css
+++ b/css/style.css
@@ -187,23 +187,28 @@ table td .multiselect-container input[type=checkbox]{
     background: #cfffcc;
 }
 .lgreen:hover{
-    background: #bdf3bd!important;
+    background: #bdf3bd;
 }
 
 
 
 
 /*lifd-report row colors*/
+#lifd-report  tr:nth-child(even){
+    background: #cfffcc;
+}
+#lifd-report  tr:nth-child(odd){
+    background: #cfffcc;
+}
+
+
 #lifd-report tr:nth-child(even) .rose{
     background: #FFCCCC;
 }
 #lifd-report tr:nth-child(odd) .rose{
     background: #FFD7D7;
 }
-#lifd-report tr:nth-child(odd) .rose:hover{
-    background: #FFD7D7;
-}
-#lifd-report tr:nth-child(even) .rose:hover{
+#lifd-report tr:hover .rose{
     background: #FFCCCC;
 }
 
@@ -228,12 +233,10 @@ table td .multiselect-container input[type=checkbox]{
 #lifd-report  tr:nth-child(even) .lightcyan{
     background: rgb(210, 253, 253);
 }
-#lifd-report tr:nth-child(odd):hover .lightcyan{
+#lifd-report tr:hover .lightcyan{
     background: rgb(198, 245, 253)!important;
 }
-#lifd-report tr:nth-child(even):hover .lightcyan{
-    background: lightcyan!important;
-}
+
 
 #lifd-report tr:nth-child(even) .yellow{
     background: #ffc;
@@ -241,12 +244,10 @@ table td .multiselect-container input[type=checkbox]{
 #lifd-report tr:nth-child(odd) .yellow{
     background: #f5ffcf;
 }
-#lifd-report tr:nth-child(odd):hover .yellow{
-    background: #fafac7!important;
+#lifd-report tr:hover .yellow{
+    background: #fafac7;
 }
-#lifd-report tr:nth-child(even):hover .yellow{
-    background: #f5ffcf!important;
-}
+
 
 #lifd-report tr:nth-child(even) .lgreen{
     background: #B8FDB8;
@@ -254,11 +255,51 @@ table td .multiselect-container input[type=checkbox]{
 #lifd-report tr:nth-child(odd) .lgreen{
     background: #cfffcc;
 }
-#lifd-report tr:nth-child(odd) .lgreen:hover{
-    background: #cfffcc;
+#lifd-report tr:nth-child(odd):hover .lgreen{
+    background: #acffbd;
 }
-#lifd-report tr:nth-child(even) .lgreen:hover{
-    background: #B8FDB8;
+#lifd-report tr:hover .lgreen{
+    background: #acffbd;
+}
+
+#lifd-report .collapsing{
+    -webkit-transition: none;
+    transition: none;
+}
+
+#lifd-report tr[data-row]{
+    border-bottom: 1px solid #ccc;
+}
+
+#lifd-report .collapse-container{
+    border: 2px solid #35E244;
+}
+#lifd-report table{
+    margin-top:10px;
+    box-shadow: 0px 0px 10px #35E244;
+}
+
+#lifd-report .blank{
+    opacity: 0;
+}
+
+#lifd-report .table>tbody>tr>td{
+    border-top: none;
+}
+#lifd-report tr.text-center td{
+    cursor: default;
+}
+#lifd-report tr.collapse-container td{
+    cursor: pointer;
+}
+
+#lifd-report .table>tbody>tr>th {
+    border-right: 1px solid #ededed;
+    background-color: #059400;
+    color: #fff;
+}
+#lifd-report .table>tbody>tr.collapse-header>th{
+    background-color: #4FCA4B;
 }
 
 
