--- a/css/style.css
+++ b/css/style.css
@@ -302,6 +302,15 @@ table td .multiselect-container input[type=checkbox]{
     background-color: #4FCA4B;
 }
 
+#lifd-report .label {
+    display: inline;
+    font-size: 100%;
+    font-weight: normal;
+    color: #333;
+    text-align: left;
+    white-space: normal;
+    vertical-align: baseline;
+}
 
 
 
