--- a/css/style.css
+++ b/css/style.css
@@ -276,13 +276,15 @@ table td .multiselect-container input[type=checkbox]{
 }
 #lifd-report table{
     margin-top:10px;
-    box-shadow: 0px 0px 10px #35E244;
 }
 
 #lifd-report .blank{
     opacity: 0;
 }
 
+#lifd-report .table>tbody>tr{
+    border-bottom: 1px solid #ccc;
+}
 #lifd-report .table>tbody>tr>td{
     border-top: none;
 }
@@ -295,12 +297,15 @@ table td .multiselect-container input[type=checkbox]{
 
 #lifd-report .table>tbody>tr>th {
     border-right: 1px solid #ededed;
-    background-color: #059400;
-    color: #fff;
+    height: 160px;
+    white-space: nowrap;
+    width: 30px;
 }
-#lifd-report .table>tbody>tr.collapse-header>th{
-    background-color: #4FCA4B;
+#lifd-report .table>tbody>tr>th>div {
+    transform: translate(5px, 135px) rotate(270deg);
+    width: 0px;
 }
+
 
 #lifd-report .label {
     display: inline;
