--- a/css/static_map.css
+++ b/css/static_map.css
@@ -18,7 +18,7 @@ html, body {
 
 .left_panel ul{
     list-style: none;
-    padding-left: 15px;
+    padding-left: 0px;
 }
 .left_panel ul a{
     cursor: pointer;
@@ -26,4 +26,18 @@ html, body {
 
 .left_panel ul li{
     margin: 3px 0px ;
+    border-top: 1px solid #ccc;
+}
+
+
+.left_panel ul li img{
+    margin-top: -25px;
+
+}
+.left_panel ul li a>div{
+    display: inline-block;
+}
+
+.left_panel ul li a:hover div{
+    text-decoration: underline;
 }
