--- a/css/wPaint.css
+++ b/css/wPaint.css
@@ -359,3 +359,21 @@
 .wPaint-menu-icon-name-rectangle{
     display: none!important;
 }
+
+
+.wpaintContainer{
+    position: absolute;
+    top:0px;
+    left:0px;
+    width: 100%;
+    height: 100%;
+    min-width: 500px;
+    min-height: 500px;
+    display: none;
+    background: white;
+}
+
+#wPaintMobile{
+    width: 500px;
+    height:500px;
+}
