--- a/css/style.css
+++ b/css/style.css
@@ -824,10 +824,11 @@ table.table>tbody>tr>td{
 
 
 .td-image-center{
+    width: 100px;
+    height: 100px;
     padding: 1px 1px;
     text-align: center;
     max-width: 100%;
-    height: auto;
     margin-right: 15px;
     margin-top: 2px;
     margin-bottom: 2px;
