--- a/css/style.css
+++ b/css/style.css
@@ -856,3 +856,22 @@ td a.text-danger{
 .report-form-container .filter-info-container .filter-select-label{
     top:0px;
 }
+
+.modal-form .form-group{
+    width: 30%;
+    float: left;
+    padding: 10px;
+}
+.modal-form .form-group .btn-group{
+    display: block;
+}
+.modal-form .form-group button.multiselect{
+    width:100%;
+}
+
+.modal-form .buttons-group{
+    width: 100%;
+    clear: both;
+    padding-bottom: 0px;
+    margin-bottom: 0px;
+}
