--- a/css/forms/form.css
+++ b/css/forms/form.css
@@ -10,12 +10,13 @@ html, body {
 }
 .form-block{
     display: inline-block;
-    float: left;
+    margin-left: 5px;
 }
 .form-configuration-container{
     display: inline-block;
     width: 30%;
     border-radius: 5px;
+    float: right;
 }
 
 .fields-config{
@@ -34,7 +35,6 @@ html, body {
 }
 
 .form-row{
-    border: 1px solid #ccc;
     padding: 10px;
     width: 100%;
     height: 50px;
@@ -47,7 +47,7 @@ html, body {
 
 .value{
     display: inline-block;
-    width: 200px;
+    width: 150px;
     height: 25px;
     text-align: center;
     box-shadow:  0px 0px 1px #ccc;
@@ -62,14 +62,16 @@ html, body {
     /*padding: 5px;*/
 }
 .tmp-label{
-    max-width: 200px;
+    max-width: 150px;
     overflow: hidden;
     display: inline-block;
     padding: 0px 5px;
+    line-height: 25px;
+    height: 25px;
 }
 
 .datepicker{
-    width: 200px;
+    width: 150px;
 }
 
 .form-btns-container{
@@ -81,5 +83,28 @@ html, body {
     padding: 5px;
 }
 .available-options-select{
-    width: 200px;
+    width: 150px;
+}
+
+.remove-field{
+    margin-right: 5px;
+}
+
+
+.form-block .value .btn-group, .form-block .value .btn-group button{
+    width:150px;
+    line-height: 12px;
+    height: 25px;
+}
+
+hr{
+    margin: 0px;
+    border-top: 1px solid #333;
+}
+
+.kohana{
+    display: none;
+}
+.val input[type="text"]{
+    width:150px;
 }
