added build tooltip

--- a/css/style.css
+++ b/css/style.css
@@ -885,3 +885,14 @@ td a.text-danger{
 .form-group p.form-control-static{
     margin-bottom: -45px;
 }
+
+.popover-content ul{
+    padding-left: 0px;
+    list-style: none;
+}
+
+#fda_table td>.glyphicon{
+    float: right;
+    margin-top: 3px;
+    margin-left: 2px;
+}
