--- a/css/forms/form.css
+++ b/css/forms/form.css
@@ -2,11 +2,15 @@ html, body {
     height: 100%;
 }
 
+.page-header{
+    border-bottom: none;
+}
 
 .form-container{
     display: inline-block;
     width: 70%;
     float: left;
+    padding: 0px 10px;
 }
 .form-block{
     display: inline-block;
@@ -24,7 +28,7 @@ html, body {
 }
 
 .form-configuration-container>div{
-    padding: 10px 20px;
+    padding: 7px 10px;
     border: 1px solid #ccc;
     border-radius: 5px;
 }
@@ -35,9 +39,11 @@ html, body {
 }
 
 .form-row{
-    padding: 10px;
+    padding: 7px 10px 10px 10px;
     width: 100%;
     height: 50px;
+    border: 1px solid #F7F7F7;
+    margin: 1px 0px;
 }
 
 .label-input,
@@ -52,10 +58,13 @@ html, body {
     text-align: center;
     box-shadow:  0px 0px 1px #ccc;
     float: left;
+    margin-right: 3px;
+    line-height: 25px;
+
 }
 
 .value.selected{
-    box-shadow:  0px 0px 5px green;
+    box-shadow: 0px 0px 30px 1px #7FFD7F;
 }
 
 .value-input{
@@ -68,10 +77,7 @@ html, body {
     padding: 0px 5px;
     line-height: 25px;
     height: 25px;
-}
-
-.datepicker{
-    width: 150px;
+    font-weight: bold;
 }
 
 .form-btns-container{
@@ -84,6 +90,7 @@ html, body {
 }
 .available-options-select{
     width: 150px;
+    display: none;
 }
 
 .remove-field{
@@ -98,7 +105,7 @@ html, body {
 }
 
 hr{
-    margin: 0px;
+    margin: 1px 0px;
     border-top: 1px solid #333;
 }
 
@@ -107,4 +114,8 @@ hr{
 }
 .val input[type="text"]{
     width:150px;
+}
+
+.remove-line{
+    float: right;
 }
