fix for lifd report

--- a/css/style.css
+++ b/css/style.css
@@ -895,4 +895,12 @@ td a.text-danger{
     float: right;
     margin-top: 3px;
     margin-left: 2px;
+    font-size: 12px;
+    cursor: pointer;
+    color:#848484;
+}
+
+#fda_table td>.glyphicon:hover{
+    color:#333;
+    text-decoration: underline;
 }
