--- a/css/forms/form.css
+++ b/css/forms/form.css
@@ -60,6 +60,9 @@ html, body {
     float: left;
     margin-right: 3px;
     line-height: 25px;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
 
 }
 
