--- a/css/dashboard.css
+++ b/css/dashboard.css
@@ -1,3 +1,173 @@
+.kohana{
+    display: none;
+}
+
+body,html{
+    height: 100%;
+}
+
+/* remove outer padding */
+.main .row{
+    padding: 0px;
+    margin: 0px;
+}
+
+/*Remove rounded coners*/
+
+nav.sidebar.navbar {
+    border-radius: 0px;
+}
+
+nav.sidebar, .main{
+    -webkit-transition: margin 200ms ease-out;
+    -moz-transition: margin 200ms ease-out;
+    -o-transition: margin 200ms ease-out;
+    transition: margin 200ms ease-out;
+}
+.black-navbar.navbar button.navbar-toggle{
+    float: left;
+}
+
+/* Add gap to nav and right windows.*/
+.main{
+    padding: 10px 10px 0 10px;
+}
+
+/* .....NavBar: Icon only with coloring/layout.....*/
+/*small/medium side display*/
+@media (min-width: 1070px) {
+
+    /*Allow main to be next to Nav*/
+    .main{
+        position: absolute;
+        width: calc(100% - 40px); /*keeps 100% minus nav size*/
+        margin-left: 40px;
+        float: right;
+    }
+
+    /*lets nav bar to be showed on mouseover*/
+    nav.sidebar:hover + .main{
+        margin-left: 200px;
+    }
+
+    /*Center Brand*/
+    nav.sidebar.navbar.sidebar>.container .navbar-brand, .navbar>.container-fluid .navbar-brand {
+        margin-left: 0px;
+    }
+    /*Center Brand*/
+    nav.sidebar .navbar-brand, nav.sidebar .navbar-header{
+        text-align: center;
+        width: 100%;
+        margin-left: 0px;
+    }
+
+    /*Center Icons*/
+    nav.sidebar a{
+        padding-right: 13px;
+    }
+
+    /*adds border top to first nav box */
+    nav.sidebar .navbar-nav > li:first-child{
+        border-top: 1px #e5e5e5 solid;
+    }
+
+    /*adds border to bottom nav boxes*/
+    nav.sidebar .navbar-nav > li{
+        border-bottom: 1px #e5e5e5 solid;
+    }
+
+    /* Colors/style dropdown box*/
+    nav.sidebar .navbar-nav .open .dropdown-menu {
+        position: static;
+        float: none;
+        width: auto;
+        margin-top: 0;
+        background-color: transparent;
+        border: 0;
+        -webkit-box-shadow: none;
+        box-shadow: none;
+    }
+
+    /*allows nav box to use 100% width*/
+    nav.sidebar .navbar-collapse, nav.sidebar .container-fluid{
+        padding: 0 0px 0 0px;
+    }
+
+    /*colors dropdown box text */
+    .navbar-inverse .navbar-nav .open .dropdown-menu>li>a {
+        color: #777;
+    }
+
+    /*gives sidebar width/height*/
+    nav.sidebar{
+        width: 200px;
+        height: 100%;
+        margin-left: -160px;
+        float: left;
+        z-index: 10;
+        margin-bottom: 0px;
+    }
+
+    /*give sidebar 100% width;*/
+    nav.sidebar li {
+        width: 100%;
+    }
+
+    /* Move nav to full on mouse over*/
+    nav.sidebar:hover{
+        margin-left: 0px;
+    }
+    /*for hiden things when navbar hidden*/
+    .forAnimate{
+        opacity: 0;
+    }
+}
+
+/* .....NavBar: Fully showing nav bar..... */
+
+@media (min-width: 1330px) {
+
+    /*Allow main to be next to Nav*/
+    .main{
+        width: calc(100% - 200px); /*keeps 100% minus nav size*/
+        margin-left: 200px;
+        border-left: 1px solid #ccc;
+    }
+
+    /*Show all nav*/
+    nav.sidebar{
+        margin-left: 0px;
+        float: left;
+    }
+    /*Show hidden items on nav*/
+    nav.sidebar .forAnimate{
+        opacity: 1;
+    }
+}
+
+nav.sidebar .navbar-nav .open .dropdown-menu>li>a:hover, nav.sidebar .navbar-nav .open .dropdown-menu>li>a:focus {
+    color: #CCC;
+    background-color: transparent;
+}
+
+nav:hover .forAnimate{
+    opacity: 1;
+}
+section{
+    padding-left: 15px;
+}
+
+
+
+.black-navbar button.navbar-toggle{
+
+}
+
+
+
+
+
+
 /*
  * Base structure
  */
@@ -12,97 +182,97 @@ body {
  * Global add-ons
  */
 
-.sub-header {
-    padding-bottom: 10px;
-    border-bottom: 1px solid #eee;
-}
+/*.sub-header {*/
+    /*padding-bottom: 10px;*/
+    /*border-bottom: 1px solid #eee;*/
+/*}*/
 
 /*
  * Top navigation
  * Hide default border to remove 1px line.
  */
-.navbar-fixed-top {
-    border: 0;
-}
+/*.navbar-fixed-top {*/
+    /*border: 0;*/
+/*}*/
 
 /*
  * Sidebar
  */
 
 
-.sidebar {
-    position: fixed;
-    top: 51px;
-    bottom: 0;
-    left: 0;
-    z-index: 1000;
-    display: block;
-    padding: 20px;
-    overflow-x: hidden;
-    overflow-y: auto; /* Scrollable contents if viewport is shorter than content. */
-    background-color: #f5f5f5;
-    border-right: 1px solid #eee;
-}
+/*.sidebar {*/
+    /*position: fixed;*/
+    /*top: 51px;*/
+    /*bottom: 0;*/
+    /*left: 0;*/
+    /*z-index: 1000;*/
+    /*display: block;*/
+    /*padding: 20px;*/
+    /*overflow-x: hidden;*/
+    /*overflow-y: auto; *//* Scrollable contents if viewport is shorter than content. */
+    /*background-color: #f5f5f5;*/
+    /*border-right: 1px solid #eee;*/
+/*}*/
 
 
 /* Sidebar navigation */
-.nav-sidebar {
-    margin-right: -21px; /* 20px padding + 1px border */
-    margin-bottom: 20px;
-    margin-left: -20px;
-}
-.nav-sidebar > li > a {
-    padding-right: 20px;
-    padding-left: 20px;
-}
-.nav-sidebar > .active > a,
-.nav-sidebar > .active > a:hover,
-.nav-sidebar > .active > a:focus {
-    color: #fff;
-    background-color: #428bca;
-}
+/*.nav-sidebar {*/
+    /*margin-right: -21px; *//* 20px padding + 1px border */
+    /*margin-bottom: 20px;*/
+    /*margin-left: -20px;*/
+/*}*/
+/*.nav-sidebar > li > a {*/
+    /*padding-right: 20px;*/
+    /*padding-left: 20px;*/
+/*}*/
+/*.nav-sidebar > .active > a,*/
+/*.nav-sidebar > .active > a:hover,*/
+/*.nav-sidebar > .active > a:focus {*/
+    /*color: #fff;*/
+    /*background-color: #428bca;*/
+/*}*/
 
 
 /*
  * Main content
  */
 
-.main {
-    padding: 20px;
-}
-@media (min-width: 768px) {
-    .main {
-        padding-right: 40px;
-        padding-left: 40px;
-    }
-}
-.main .page-header {
-    margin-top: 0;
-}
+/*.main {*/
+    /*padding: 20px;*/
+/*}*/
+/*@media (min-width: 768px) {*/
+    /*.main {*/
+        /*padding-right: 40px;*/
+        /*padding-left: 40px;*/
+    /*}*/
+/*}*/
+/*.main .page-header {*/
+    /*margin-top: 0;*/
+/*}*/
 
 
-/*
- * Placeholder dashboard ideas
- */
+/**/
+ /** Placeholder dashboard ideas*/
+ /**/
 
-.placeholders {
-    margin-bottom: 30px;
-    text-align: center;
-}
-.placeholders h4 {
-    margin-bottom: 0;
-}
-.placeholder {
-    margin-bottom: 20px;
-}
-.placeholder img {
-    display: inline-block;
-    border-radius: 50%;
-}
+/*.placeholders {*/
+    /*margin-bottom: 30px;*/
+    /*text-align: center;*/
+/*}*/
+/*.placeholders h4 {*/
+    /*margin-bottom: 0;*/
+/*}*/
+/*.placeholder {*/
+    /*margin-bottom: 20px;*/
+/*}*/
+/*.placeholder img {*/
+    /*display: inline-block;*/
+    /*border-radius: 50%;*/
+/*}*/
 
-#report-container{
-    min-width: 800px;
-}
-#report-container form{
-    border: none;
-}
+/*#report-container{*/
+    /*min-width: 800px;*/
+/*}*/
+/*#report-container form{*/
+    /*border: none;*/
+/*}*/
