--- a/css/style.css
+++ b/css/style.css
@@ -707,6 +707,13 @@ table.table>tbody>tr>td{
     .navbar-toggle {
         display: block;
     }
+    .navbar-header .navbar-toggle {
+        float:left;
+        margin-left: 15px;
+    }
+    .black-navbar .container-fluid{
+        padding-left: 0px;
+    }
     .navbar-collapse {
         border-top: 1px solid transparent;
         box-shadow: inset 0 1px 0 rgba(255,255,255,0.1);
