--- a/css/forms/form.css
+++ b/css/forms/form.css
@@ -18,9 +18,10 @@ html, body {
 }
 .form-configuration-container{
     display: inline-block;
-    width: 30%;
+    max-width: 30%;
     border-radius: 5px;
     float: right;
+    margin-top: 10px ;
 }
 
 .fields-config{
@@ -85,6 +86,9 @@ html, body {
     line-height: 25px;
     height: 25px;
     font-weight: bold;
+}
+#form-data .tmp-label{
+    min-width: 100px;
 }
 
 .form-btns-container{
