--- a/css/devices-media.css
+++ b/css/devices-media.css
@@ -24,9 +24,26 @@ and (max-width : 801px){
 
 @media only screen
 and (max-width : 568px){
-       .search-select-container{
+   .search-select-container{
         margin: 0px 0px 10px 15px;
         width: 280px!important;
+    }
+    .modal {
+        position: fixed;
+        top: 3%;
+        right: 3%;
+        left: 3%;
+        width: auto;
+        margin: 0;
+    }
+    .modal-body {
+        height: 60%;
+    }
+    .modal-body {
+        max-height: 350px;
+        padding: 15px;
+        overflow-y: auto;
+        -webkit-overflow-scrolling: touch;
     }
 
 }
