--- a/css/forms/form.css
+++ b/css/forms/form.css
@@ -15,6 +15,8 @@ html, body {
 .form-block{
     display: inline-block;
     margin-left: 5px;
+    height: 40px;
+    vertical-align: middle;
 }
 .form-configuration-container{
     display: inline-block;
@@ -89,6 +91,7 @@ html, body {
 }
 #form-data .tmp-label{
     min-width: 100px;
+    margin-top: 5px;
 }
 
 .form-btns-container{
@@ -149,6 +152,14 @@ hr{
 .value[data-type="label"]{
     width: auto;
     min-width: 150px;
+}
+.value[data-type="canvas"]{
+    width: 250px;
+    height: 40px;
+    margin-top: -4px;
+}
+.value[data-type="date"],.value[data-type="text"]{
+    margin-top: 5px;
 }
 
 .form-container.submited{
