--- a/css/forms/formbuilder.css
+++ b/css/forms/formbuilder.css
@@ -46,6 +46,13 @@
 .table-container{
     position: relative;
 }
+.table-container>i{
+    display: none;
+    position: absolute;
+}
+.table-container:hover>i{
+    display: block;
+}
 .table-container>button{
     display: none;
     position: absolute;
@@ -56,7 +63,8 @@
     display:block;
 }
 
-#addField canvas{
+#addField canvas,
+.editable-cell canvas{
     border:1px solid #ccc;
     width: 200px;
     height: 100px;
@@ -68,3 +76,5 @@
 #options-preview{
     width: 150px;
 }
+
+.ui-state-highlight { height: 1.5em; line-height: 1.2em; }
