--- a/css/forms/formbuilder.css
+++ b/css/forms/formbuilder.css
@@ -56,7 +56,7 @@
 .table-container>button{
     display: none;
     position: absolute;
-    right:0px;
+    left:15px;
     top:0px;
 }
 .table-container:hover>button{
