--- a/css/forms/formbuilder.css
+++ b/css/forms/formbuilder.css
@@ -135,3 +135,24 @@ table.table.not-bordered>tbody>tr>td {
 .modal-header{
     font-size: 25px;
 }
+
+#table-list{
+    list-style: none;
+    padding-left: 5px;
+}
+
+#table-list li{
+    background: #F9F9FF;
+    padding: 10px;
+    cursor:pointer;
+    border-top: 1px solid #B0B7FF;
+    border-left: 1px solid #B0B7FF;
+    border-right: 1px solid #B0B7FF;
+}
+#table-list li:hover{
+    background: #f4f4fa;
+}
+
+#table-list li:last-of-type{
+    border-bottom: 1px solid #B0B7FF;
+}
