--- a/css/forms/formbuilder.css
+++ b/css/forms/formbuilder.css
@@ -14,19 +14,20 @@
     display: inline-block;
     width: 100px;
 }
-.editable-table.table{
+table.editable-table{
     margin-bottom: 0px;
 }
 
 
-#form-builder-container table.table>tbody>tr>td {
+#form-builder-container table>tbody>tr>td {
     border-right: 1px solid #e9e9e9;
     padding: 10px 5px;
+    width: auto;
 }
-#form-builder-container table.table>tbody>tr>td.tmp-cell{
+#form-builder-container table>tbody>tr>td.tmp-cell{
     background: #FBFFFB;
 }
-#form-builder-container table.table>tbody>tr>td.editable-cell:hover{
+#form-builder-container table>tbody>tr>td.editable-cell:hover{
     border:1px solid #ccc;
     cursor: pointer;
     background: #efefef;
@@ -50,7 +51,7 @@
     position: relative;
 }
 .table-container>i{
-    display: none;
+    /*display: none;*/
     position: absolute;
 }
 .table-container:hover>i{
@@ -59,7 +60,7 @@
     z-index: 9;
 }
 .table-container>button{
-    display: none;
+    /*display: none;*/
     position: absolute;
     left:15px;
     top:0px;
@@ -126,7 +127,7 @@
 }
 
 
-table.table.not-bordered>tbody>tr>td {
+table.not-bordered>tbody>tr>td {
     border:none!important;
 }
 
@@ -205,9 +206,12 @@ table tr:first-of-type>td>.remove-column{
 }
 
 table tr.tmp-cell:first-of-type>td.tmp-cell:first-of-type{
-    width: 50px!important;
-    max-width: 50px!important;
-    min-width: 50px!important;
+    width: 80px!important;
+    max-width: 80px!important;
+    min-width: 80px!important;
+}
+table tr.tmp-cell:first-of-type>td.tmp-cell{
+    min-width: 80px!important;
 }
 
 .JCLRgrips>.JCLRgrip:first-of-type{
